# Natty

./: .gitignore  BUILD  CLAUDE.md  MODULE.bazel  README.md  maven_install.json  natty.code-workspace  requirements.in  requirements.txt
examples/brick_breaker_cli/: BUILD  ball.md  brick_breaker_cli.md  obstacle.md  sound.md
examples/dino_runner/: BUILD  dino_runner.md  dinosaur.md  game_loop.md  game_world.md  input_handler.md  obstacle.md  physics_engine.md  renderer.md  score.md  sound.md
examples/gemini_api_cli/: BUILD  gemini_api_cli.md  gemini_api_docs.txt  gemini_api_lib.md
examples/pretty_printer_cli/: BUILD  cli_printer.md  pretty_print.md
java/com/natty/decompiler/: BUILD  ClassNameFilter.java  NattyJavaDecompiler.java  Options.java
python/nattyc/: BUILD  generate_usage_description.py  llm.py  main.py
rules_natty/: BUILD  defs.bzl
site_packages_extra/: sitecustomize.py
